# cmakep

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  run.sh
Adder/: CMakeLists.txt  adder.cpp
